--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 		<link rel="stylesheet" href="style.css"/>
 		<body>
 			<center>
-			<img style="border: 5px solid black;" src="web programming sem 5/Basic html assets/pfp.png"/>
+			<img style="border: 5px solid black;" src="pfp.png"/>
 			
 			<h1>Muhammad Syadeq Farzli Bin Farthie Anuar</h1>
 			<h4>ft. ezzairel</h4>
 			
 			<h2 style="color: purple">Current Mood :</h2>
-			<a href="web programming sem 5/Basic html assets/glorb cat.jpg">Im stroking my cat rn, all up on my cat rn, just strokin her up, strokin my cat rn.</a>
+			<a href="glorb cat.jpg">Im stroking my cat rn, all up on my cat rn, just strokin her up, strokin my cat rn.</a>
 		
 			<h2 style="color: purple">Work Experience : </h2>
 			<p>Freelancing (Programming/arts)</p>
@@ -24,5 +24,6 @@
 	</head>
 
 </html>
+
 
 
