--- a/index.html
+++ b/index.html
@@ -1,29 +1,203 @@
+<!DOCTYPE html>
+
 <html>
 	<head>
-		<link rel="stylesheet" href="style.css"/>
+		<title>About Me site :3</title>
+		<meta charset="UTF-8">
+  	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<style>
+			.quicksand-QuickFont 
+			{
+				font-family: "Quicksand", sans-serif;
+				src: url('quicksandFont/Quicksand-Light.ttf') format('truetype');
+				src: url('quicksandFont/Quicksand-Bold.ttf') format('truetype');
+				src: url('quicksandFont/Quicksand-Medium.ttf') format('truetype');
+				src: url('quicksandFont/Quicksand-Regular.ttf') format('truetype');
+				src: url('quicksandFont/Quicksand-SemiBold.ttf') format('truetype');
+				src: url('quicksandFont/Quicksand-VariableFont_wght.ttf') format('truetype');
+				font-optical-sizing: auto;
+				font-weight: normal;
+				font-style: normal;
+			}
+			
+			body
+			{
+				margin: 0;
+				background: linear-gradient(to bottom, #a2cffa, #ffeeb8) no-repeat center center fixed;
+				background-size: cover;
+				font-family: "Quicksand", sans-serif;
+				color: white;
+			}
+
+			header
+			{
+				width: 100%;
+				position: absolute;
+				top: 60px;
+				right: 0;
+			}
+
+			.header-center
+			{
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				gap: 40px;
+				font-size: 23px;
+			}
+
+			.nav-link 
+			{
+				color: white;
+				text-decoration: none;
+				transition: color 0.5s ease;
+			}
+
+			.nav-link:hover 
+			{
+				color: #fa9f7a;
+			}
+
+			 .draggable-window 
+			 {
+				background-color: #fff;
+				border: 2px solid #000;
+				position: fixed;
+				top: 100px;
+				left: 50%;
+				transform: translateX(-50%);
+				z-index: 1000;
+				display: none;
+				box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+				transition: top 0.1s, left 0.1s;
+			}
+
+			.draggable-header
+			{
+				background-color: #333;
+				color: white;
+				padding: 25px;
+				cursor: move;
+				text-align: center;
+			}
+
+			.draggable-body 
+			{
+				padding: 15px;
+				color: #333;
+			}
+		</style>
 		<body>
-			<center>
-			<img style="border: 5px solid black;" src="pfp.png"/>
+			<header>
+				<div class="header-center">
+					<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('profileWindow')">PROFILE</a>
+					<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('moviesWindow')">MOVIES</a>
+					<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('booksWindow')">BOOKS</a>
+					<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('otherSitesWindow')">OTHER SITES</a>
+				</div>
+			</header>
+
+			<div id="profileWindow" class="draggable-window">
+				<div class="draggable-header" id="profileWindowHeader">
+					Profile Window
+				</div>
+				<div class="draggable-body">
+					<img style="border: 2px solid black;" src="Basic html assets/pfp.png" alt="Profile Image"/>
+					<h1>Muhammad Syadeq Farzli Bin Farthie Anuar</h1>
+					<h4>ft. ezzairel</h4>
+					
+					<h2 style="color: purple">Current Mood :</h2>
+					<a href="javascript:void(0)" onclick="toggleWindow('imageWindow')">
+					Im stroking my cat rn, all up on my cat rn, just strokin her up, strokin my cat rn.</a>
+	
+				
+					<h2 style="color: purple">Work Experience : </h2>
+					<p>Freelancing (Programming/arts)</p>
+				</div>
+			</div>
 			
-			<h1>Muhammad Syadeq Farzli Bin Farthie Anuar</h1>
-			<h4>ft. ezzairel</h4>
+			<div id="imageWindow" class="draggable-window">
+				<div class="draggable-header" id="imageWindowHeader">
+					My Mood
+				</div>
+				<div class="draggable-body">
+					<img src="Basic html assets/glorb cat.jpg"/>
+				</div>
+			</div>
+
+			<div id="booksWindow" class="draggable-window">
+				<div class="draggable-header" id="booksWindowHeader">
+					Books Window
+				</div>
+				<div class="draggable-body">
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt16311594/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_f1" target="_blank"> F1 : THE MOVIE</p>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1950186" target="_blank"> FORD VS FERRARI</p>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1001526/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_megamind" target="_blank"> MEGAMIND</p>
+				</div>
+			</div>
 			
-			<h2 style="color: purple">Current Mood :</h2>
-			<a href="glorb cat.jpg">Im stroking my cat rn, all up on my cat rn, just strokin her up, strokin my cat rn.</a>
-		
-			<h2 style="color: purple">Work Experience : </h2>
-			<p>Freelancing (Programming/arts)</p>
-			
-			<h2 style="color: purple">My sites :</h2>
-			<a style="font-size: 30px;"href="https://syaserver.my"> Syaserver</p>
-			<a style="font-size: 30px;"href="https://grove-site.syaserver.my"> grove-site</p>
-			
-			</center>
+			<div id="moviesWindow" class="draggable-window">
+				<div class="draggable-header" id="moviesWindowHeader">
+					Books Window
+				</div>
+				<div class="draggable-body">
+					<a style="font-size: 20px;"href="https://www.anime-planet.com/manga/chainsaw-man" target="_blank"> CHAINSAW MAN</p>
+					<a style="font-size: 20px;"href="https://myanimelist.net/anime/51678/Oniichan_wa_Oshimai" target="_blank">ONII CHAN WA OSHIMAIi!</p>
+				</div>
+			</div>
+
+			<div id="otherSitesWindow" class="draggable-window">
+				<div class="draggable-header" id="otherSitesWindowHeader">
+					Other Sites Window
+				</div>
+				<div class="draggable-body">
+					<h2 style="color: purple">My sites :</h2>
+					<a style="font-size: 25px;"href="https://syaserver.my"> https://syaserver.my</p>
+					<a style="font-size: 25px;"href="https://grove-site.syaserver.my"> https://grove-site.syaserver.my</p>
+				</div>
+			</div>
+
+			<script>
+				function toggleWindow(ElementId) 
+				{
+					var window = document.getElementById(ElementId);
+					window.style.display = window.style.display === 'block' ? 'none' : 'block';
+
+					makeDraggable(ElementId);
+				}
+
+				function makeDraggable(ElementId) 
+				{
+					var dragElement = document.getElementById(ElementId);
+					var dragHeader = document.getElementById(ElementId + "Header");
+
+					if (!dragHeader) return;
+					dragHeader.onmousedown = function(event) 
+					{
+						var shiftX = event.clientX - dragElement.getBoundingClientRect().left;
+						var shiftY = event.clientY - dragElement.getBoundingClientRect().top;
+
+						dragElement.style.zIndex = 1001;
+
+						document.onmousemove = function(event) 
+						{
+							dragElement.style.left = event.clientX + shiftX + 'px';
+							dragElement.style.top = event.clientY - shiftY + 'px';
+						};
+
+						document.onmouseup = function() 
+						{
+							document.onmousemove = null;
+							document.onmouseup = null;
+							dragElement.style.zIndex = 1000;
+						};
+					};
+					dragHeader.ondragstart = function() 
+					{
+						return false;
+					};
+				}
+			</script>
 		</body>
-		
 	</head>
-
 </html>
-
-
-
