--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
 					Books Window
 				</div>
 				<div class="draggable-body">
-					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt16311594/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_f1" target="_blank"> F1 : THE MOVIE</p>
-					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1950186" target="_blank"> FORD VS FERRARI</p>
-					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1001526/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_megamind" target="_blank"> MEGAMIND</p>
+					<a style="font-size: 20px;"href="https://www.anime-planet.com/manga/chainsaw-man" target="_blank"> CHAINSAW MAN</a>
+					<a style="font-size: 20px;"href="https://myanimelist.net/anime/51678/Oniichan_wa_Oshimai" target="_blank">ONII CHAN WA OSHIMAIi!</a>
 				</div>
 			</div>
 			
 			<div id="moviesWindow" class="draggable-window">
 				<div class="draggable-header" id="moviesWindowHeader">
-					Books Window
+					Movies Window
 				</div>
 				<div class="draggable-body">
-					<a style="font-size: 20px;"href="https://www.anime-planet.com/manga/chainsaw-man" target="_blank"> CHAINSAW MAN</p>
-					<a style="font-size: 20px;"href="https://myanimelist.net/anime/51678/Oniichan_wa_Oshimai" target="_blank">ONII CHAN WA OSHIMAIi!</p>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt16311594/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_f1" target="_blank"> F1 : THE MOVIE</a>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1950186" target="_blank"> FORD VS FERRARI</p>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1001526/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_megamind" target="_blank"> MEGAMIND</a>
 				</div>
 			</div>
 
