--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					Profile Window
 				</div>
 				<div class="draggable-body">
-					<img style="border: 2px solid black;" src="Basic html assets/pfp.png" alt="Profile Image"/>
+					<img style="border: 2px solid black;" src="pfp.png" alt="Profile Image"/>
 					<h1>Muhammad Syadeq Farzli Bin Farthie Anuar</h1>
 					<h4>ft. ezzairel</h4>
 					
@@ -121,7 +121,7 @@
 					My Mood
 				</div>
 				<div class="draggable-body">
-					<img src="Basic html assets/glorb cat.jpg"/>
+					<img src="glorb cat.jpg"/>
 				</div>
 			</div>
 
@@ -130,8 +130,8 @@
 					Books Window
 				</div>
 				<div class="draggable-body">
-					<a style="font-size: 20px;"href="https://www.anime-planet.com/manga/chainsaw-man" target="_blank"> CHAINSAW MAN</a>
-					<a style="font-size: 20px;"href="https://myanimelist.net/anime/51678/Oniichan_wa_Oshimai" target="_blank">ONII CHAN WA OSHIMAIi!</a>
+					<p style="font-size: 20px;"href="https://www.anime-planet.com/manga/chainsaw-man" target="_blank"> CHAINSAW MAN</p>
+					<p style="font-size: 20px;"href="https://myanimelist.net/anime/51678/Oniichan_wa_Oshimai" target="_blank">ONII CHAN WA OSHIMAIi!</p>
 				</div>
 			</div>
 			
@@ -140,9 +140,9 @@
 					Movies Window
 				</div>
 				<div class="draggable-body">
-					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt16311594/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_f1" target="_blank"> F1 : THE MOVIE</a>
-					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1950186" target="_blank"> FORD VS FERRARI</p>
-					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1001526/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_megamind" target="_blank"> MEGAMIND</a>
+					<p style="font-size: 20px;"href="https://www.imdb.com/title/tt16311594/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_f1" target="_blank"> F1 : THE MOVIE</p>
+					<p style="font-size: 20px;"href="https://www.imdb.com/title/tt1950186" target="_blank"> FORD VS FERRARI</p>
+					<p style="font-size: 20px;"href="https://www.imdb.com/title/tt1001526/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_megamind" target="_blank"> MEGAMIND</p>
 				</div>
 			</div>
 
@@ -152,8 +152,8 @@
 				</div>
 				<div class="draggable-body">
 					<h2 style="color: purple">My sites :</h2>
-					<a style="font-size: 25px;"href="https://syaserver.my"> https://syaserver.my</p>
-					<a style="font-size: 25px;"href="https://grove-site.syaserver.my"> https://grove-site.syaserver.my</p>
+					<p style="font-size: 25px;"href="https://syaserver.my"> https://syaserver.my</p>
+					<p style="font-size: 25px;"href="https://grove-site.syaserver.my"> https://grove-site.syaserver.my</p>
 				</div>
 			</div>
 
@@ -201,3 +201,4 @@
 		</body>
 	</head>
 </html>
+
