--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
 		</style>
 		<body>
 			<header>
-				<div class="nav-links-container">
-					<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('profileWindow')">PROFILE</a>
-					<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('moviesWindow')">MOVIES</a>
-					<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('booksWindow')">BOOKS</a>
-					<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('otherSitesWindow')">OTHER SITES</a>
-				</div>
+				<center>
+					<div class="nav-links-container">
+						<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('profileWindow')">PROFILE</a>
+						<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('moviesWindow')">MOVIES</a>
+						<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('booksWindow')">BOOKS</a>
+						<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('otherSitesWindow')">OTHER SITES</a>
+					</div>
+				</center>
 			</header>
 
 			<div id="profileWindow" class="draggable-window">
@@ -211,6 +213,7 @@
 		</body>
 	</head>
 </html>
+
 
 
 
