--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
 			.nav-links-container {
 				position: absolute;
-				align-items: center;
-				justify-content: center;
+				align-items: flex;
+				justify-content: flex;
 				display: inline-block;
-				background-color: rgba(0, 0, 0, 0.5);
-				padding: 50px 100px;
+				background-color: #fff;
+				padding: 50px 70px;
 				border-radius: 10px;
 			}
 			
@@ -213,6 +213,7 @@
 		</body>
 	</head>
 </html>
+
 
 
 
