--- a/index.html
+++ b/index.html
@@ -59,11 +59,8 @@
 			}
 
 			.nav-links-container {
-				position: absolute;
-				align-items: flex;
-				justify-content: flex;
 				display: inline-block;
-				background-color: #fff;
+				background-color: #333;
 				padding: 50px 70px;
 				border-radius: 10px;
 			}
@@ -213,6 +210,7 @@
 		</body>
 	</head>
 </html>
+
 
 
 
