--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 				color: #fa9f7a;
 			}
 
-			.nav-links-container {
+			.nav-links-container 
+			{
+				text-size: 15px;
 				display: inline-block;
 				background-color: #333;
-				padding: 50px 70px;
+				padding: 50px 50px;
 				border-radius: 10px;
 			}
 			
@@ -121,7 +123,7 @@
 	
 				
 					<h2 style="color: purple">Work Experience : </h2>
-					<p>Freelancing (Programming/arts)</p>
+					<a>Freelancing (Programming/arts)</a>
 				</div>
 			</div>
 			
@@ -139,8 +141,8 @@
 					Books Window
 				</div>
 				<div class="draggable-body">
-					<p style="font-size: 20px;"href="https://www.anime-planet.com/manga/chainsaw-man" target="_blank"> CHAINSAW MAN</p>
-					<p style="font-size: 20px;"href="https://myanimelist.net/anime/51678/Oniichan_wa_Oshimai" target="_blank">ONII CHAN WA OSHIMAIi!</p>
+					<a style="font-size: 20px;"href="https://www.anime-planet.com/manga/chainsaw-man" target="_blank"> Chainsaw Man </a>
+					<a style="font-size: 20px;"href="https://myanimelist.net/anime/51678/Oniichan_wa_Oshimai" target="_blank"> Onii chan wa Oshimai </a>
 				</div>
 			</div>
 			
@@ -149,9 +151,9 @@
 					Movies Window
 				</div>
 				<div class="draggable-body">
-					<p style="font-size: 20px;"href="https://www.imdb.com/title/tt16311594/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_f1" target="_blank"> F1 : THE MOVIE</p>
-					<p style="font-size: 20px;"href="https://www.imdb.com/title/tt1950186" target="_blank"> FORD VS FERRARI</p>
-					<p style="font-size: 20px;"href="https://www.imdb.com/title/tt1001526/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_megamind" target="_blank"> MEGAMIND</p>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt16311594/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_f1" target="_blank"> F1 : THE MOVIE</a>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1950186" target="_blank"> FORD VS FERRARI</a>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1001526/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_megamind" target="_blank"> MEGAMIND</a>
 				</div>
 			</div>
 
@@ -161,8 +163,8 @@
 				</div>
 				<div class="draggable-body">
 					<h2 style="color: purple">My sites :</h2>
-					<p style="font-size: 25px;"href="https://syaserver.my"> https://syaserver.my</p>
-					<p style="font-size: 25px;"href="https://grove-site.syaserver.my"> https://grove-site.syaserver.my</p>
+					<a style="font-size: 25px;"href="https://syaserver.my"> https://syaserver.my</a>
+					<a style="font-size: 25px;"href="https://grove-site.syaserver.my"> https://grove-site.syaserver.my</a>
 				</div>
 			</div>
 
@@ -210,6 +212,7 @@
 		</body>
 	</head>
 </html>
+
 
 
 
