--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				text-size: 15px;
 				display: inline-block;
 				background-color: #333;
-				padding: 50px 50px;
+				padding: 30px 30px
 				border-radius: 10px;
 			}
 			
@@ -141,7 +141,7 @@
 					Books Window
 				</div>
 				<div class="draggable-body">
-					<a style="font-size: 20px;"href="https://www.anime-planet.com/manga/chainsaw-man" target="_blank"> Chainsaw Man </a>
+					<a style="font-size: 20px;"href="https://www.anime-planet.com/manga/chainsaw-man" target="_blank"> Chainsaw Man </a><p></p>
 					<a style="font-size: 20px;"href="https://myanimelist.net/anime/51678/Oniichan_wa_Oshimai" target="_blank"> Onii chan wa Oshimai </a>
 				</div>
 			</div>
@@ -151,8 +151,8 @@
 					Movies Window
 				</div>
 				<div class="draggable-body">
-					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt16311594/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_f1" target="_blank"> F1 : THE MOVIE</a>
-					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1950186" target="_blank"> FORD VS FERRARI</a>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt16311594/?ref_=nv_sr_srsg_0_tt_8_nm_0_in_0_q_f1" target="_blank"> F1 : THE MOVIE</a><p></p>
+					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1950186" target="_blank"> FORD VS FERRARI</a><p></p>
 					<a style="font-size: 20px;"href="https://www.imdb.com/title/tt1001526/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_megamind" target="_blank"> MEGAMIND</a>
 				</div>
 			</div>
@@ -163,7 +163,7 @@
 				</div>
 				<div class="draggable-body">
 					<h2 style="color: purple">My sites :</h2>
-					<a style="font-size: 25px;"href="https://syaserver.my"> https://syaserver.my</a>
+					<a style="font-size: 25px;"href="https://syaserver.my"> https://syaserver.my</a><p></p>
 					<a style="font-size: 25px;"href="https://grove-site.syaserver.my"> https://grove-site.syaserver.my</a>
 				</div>
 			</div>
@@ -212,6 +212,7 @@
 		</body>
 	</head>
 </html>
+
 
 
 
