--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 			.nav-link 
 			{
 				color: white;
+				font-size: 15px;
+				gap: 40px;
 				text-decoration: none;
 				transition: color 0.5s ease;
 			}
@@ -60,10 +62,9 @@
 
 			.nav-links-container 
 			{
-				text-size: 15px;
 				display: inline-block;
 				background-color: #333;
-				padding: 30px 30px
+				padding: 30px 30px;
 				border-radius: 10px;
 			}
 			
@@ -212,6 +213,7 @@
 		</body>
 	</head>
 </html>
+
 
 
 
