--- a/index.html
+++ b/index.html
@@ -6,20 +6,6 @@
 		<meta charset="UTF-8">
   	 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<style>
-			.quicksand-QuickFont 
-			{
-				font-family: "Quicksand", sans-serif;
-				src: url('quicksandFont/Quicksand-Light.ttf') format('truetype');
-				src: url('quicksandFont/Quicksand-Bold.ttf') format('truetype');
-				src: url('quicksandFont/Quicksand-Medium.ttf') format('truetype');
-				src: url('quicksandFont/Quicksand-Regular.ttf') format('truetype');
-				src: url('quicksandFont/Quicksand-SemiBold.ttf') format('truetype');
-				src: url('quicksandFont/Quicksand-VariableFont_wght.ttf') format('truetype');
-				font-optical-sizing: auto;
-				font-weight: normal;
-				font-style: normal;
-			}
-			
 			body
 			{
 				margin: 0;
@@ -49,8 +35,6 @@
 			.nav-link 
 			{
 				color: white;
-				font-size: 15px;
-				gap: 40px;
 				text-decoration: none;
 				transition: color 0.5s ease;
 			}
@@ -100,11 +84,13 @@
 		<body>
 			<header>
 				<center>
-					<div class="nav-links-container">
-						<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('profileWindow')">PROFILE</a>
-						<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('moviesWindow')">MOVIES</a>
-						<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('booksWindow')">BOOKS</a>
-						<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('otherSitesWindow')">OTHER SITES</a>
+					<div class="header-center">
+						<div class="nav-links-container">
+							<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('profileWindow')">PROFILE</a>
+							<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('moviesWindow')">MOVIES</a>
+							<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('booksWindow')">BOOKS</a>
+							<a href="javascript:void(0)" class="nav-link" onclick="toggleWindow('otherSitesWindow')">OTHER SITES</a>
+						</div>
 					</div>
 				</center>
 			</header>
@@ -213,6 +199,7 @@
 		</body>
 	</head>
 </html>
+
 
 
 
