--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
 				display: flex;
 				align-items: center;
 				justify-content: center;
-				gap: 40px;
+				gap: 1000px;
 				font-size: 23px;
 			}
 
 			.nav-link 
 			{
 				color: white;
+				text-decorations: none;
 				transition: color 0.5s ease;
 			}
 
